# CMake_test

./: .gitignore  CMakeLists.txt  README.md  greeter.cpp  greeter.hpp  main.cpp
include/: greeter.hpp
src/: greeter.cpp  main.cpp
